--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="{{ url_for('static', path='favicon.ico') }}" />
-    <link rel="shotcut icon" type="image/svg+xml" href="{{ url_for('static', path='favicon.ico') }}" />
+    <link rel="icon" href="/static/favicon.ico" />
+    <link rel="shotcut icon" type="image/svg+xml" href="/static/favicon.ico" />
     <!--Estilos cdnjs-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&amp;family=Noto+Sans:ital,wght@0,100..900;1,100..900&amp;display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -23,10 +23,10 @@
     <script src="https://framework-gb.cdn.gob.mx/gm/accesibilidad/js/gobmx-accesibilidad.min.js"></script>
     <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-W01CLG551Q"></script>
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.13.0/css/pro.min.css" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', path='css/estilos_publicos.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', path='css/estilos_general.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', path='css/free.gob.mx.2024.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', path='css/estilos_registro.css') }}" type="text/css">
+    <link rel="stylesheet" href="/static/css/estilos_publicos.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/estilos_general.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/free.gob.mx.2024.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/estilos_registro.css" type="text/css">
     <link rel="stylesheet" href="/static/css/styles.css" type="text/css">
   <title>{% block title %}Sistema de Facturas{% endblock %}</title>
   {% block head %}{% endblock %}
