--- a/templates/cfdi.html
+++ b/templates/cfdi.html
@@ -2,7 +2,7 @@
 {% block title %}Registro de Facturas (CFDI){% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', path='css/cfdi.css') }}">
+<link rel="stylesheet" href="/static/css/cfdi.css">
 {% endblock %}
 
 {% block content %}
@@ -140,5 +140,5 @@
   </div>
 </div>
 
-<script src="{{ url_for('static', path='js/cfdi.js') }}"></script>
+<script src="/static/js/cfdi.js"></script>
 {% endblock %}
