Versión 1.3.18, con alta de cfdi, con edición de formulario y con auditoria de CFDI

--- a/templates/areas.html
+++ b/templates/areas.html
@@ -2,7 +2,7 @@
 {% block title %}Catálogo de Áreas{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', path='css/auditoria.css') }}">
+<link rel="stylesheet" href="/static/css/auditoria.css">
 {% endblock %}
 
 {% block content %}
@@ -83,5 +83,5 @@
   </div>
 </div>
 
-<script src="{{ url_for('static', path='js/areas.js') }}"></script>
+<script src="/static/js/areas.js"></script>
 {% endblock %}
