--- a/templates/entidades.html
+++ b/templates/entidades.html
@@ -2,7 +2,7 @@
 {% block title %}Gestión de Entidades Federativas{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', path='css/auditoria.css') }}">
+<link rel="stylesheet" href="/static/css/auditoria.css">
 {% endblock %}
 
 {% block content %}
@@ -47,5 +47,5 @@
   </div>
 </div>
 
-<script src="{{ url_for('static', path='js/entidades.js') }}"></script>
+<script src="/static/js/entidades.js"></script>
 {% endblock %}
