--- a/templates/estado_orden.html
+++ b/templates/estado_orden.html
@@ -2,7 +2,7 @@
 {% block title %}Estado de orden{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', path='css/auditoria.css') }}">
+<link rel="stylesheet" href="/static/css/auditoria.css">
 {% endblock %}
 
 {% block content %}
@@ -66,5 +66,5 @@
     </div>
   </div>
 
-  <script src="{{ url_for('static', path='js/estado_orden.js') }}"></script>
+  <script src="/static/js/estado_orden.js"></script>
 {% endblock %}
