--- a/templates/facturas.html
+++ b/templates/facturas.html
@@ -2,7 +2,7 @@
 {% block title %}Gestión de Facturas/CFDI{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', path='css/facturas.css') }}">
+<link rel="stylesheet" href="/static/css/facturas.css">
 {% endblock %}
 
 {% block content %}
@@ -340,5 +340,5 @@
 </div>
 <!--fin modal CFDI-->
 
-<script src="{{ url_for('static', path='js/facturas.js') }}"></script>
+<script src="/static/js/facturas.js"></script>
 {% endblock %}
