--- a/templates/facturas_listado.html
+++ b/templates/facturas_listado.html
@@ -4,7 +4,7 @@
 {% block title %}Inicio{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', path='css/auditoria.css') }}">
+<link rel="stylesheet" href="/static/css/auditoria.css">
 
 {% endblock %}
 
@@ -72,7 +72,6 @@
                     <th>Monto Total</th>
                     <th>Fecha Recepción</th>
                     <th>Estatus</th>
-                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody id="fl_tbody">
