--- a/templates/proveedores.html
+++ b/templates/proveedores.html
@@ -2,7 +2,7 @@
 {% block title %}Proveedores{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', path='css/auditoria.css') }}">
+<link rel="stylesheet" href="/static/css/auditoria.css">
 
 {% endblock %}
 
@@ -107,5 +107,5 @@
     </div>
   </div>
 </div>  
-<script src="{{ url_for('static', path='js/proveedores.js') }}"></script>
+<script src="/static/js/proveedores.js"></script>
 {% endblock %}
