--- a/templates/catalogos.html
+++ b/templates/catalogos.html
@@ -2,7 +2,7 @@
 {% block title %}Carga Masiva de Catálogos{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', path='css/facturas.css') }}">
+<link rel="stylesheet" href="/static/css/facturas.css">
 {% endblock %}
 
 {% block content %}
@@ -76,5 +76,5 @@
   </div>
 </section>
 
-<script src="{{ url_for('static', path='js/catalogos.js') }}"></script>
+<script src="/static/js/catalogos.js"></script>
 {% endblock %}
