--- a/templates/password_reset_result.html
+++ b/templates/password_reset_result.html
@@ -49,7 +49,7 @@
     <div class="btnIcon">
       <p>&nbsp;&nbsp;&nbsp;REGRESAR</p>
       <div class="boxIcon verde">
-        <img src="{{ url_for('static', path='img/REGRESAR.svg') }}">
+        <img src="/static/img/REGRESAR.svg'">
       </div>
       <span class="s-verde"></span>
     </div>
