--- a/templates/usuario_form.html
+++ b/templates/usuario_form.html
@@ -49,7 +49,7 @@
         <a class="btnReg verde_t" href="/usuarios">
           <div class="btnIcon">
             <p>&nbsp;&nbsp;&nbsp;REGRESAR</p>
-            <div class="boxIcon verde"><img src="{{ url_for('static', path='img/REGRESAR.svg') }}"></div>
+            <div class="boxIcon verde"><img src="/static/img/REGRESAR.svg"></div>
             <span class="s-verde"></span>
           </div>
         </a></button>
@@ -58,7 +58,7 @@
         <button type="button" class="btnReg verde_t" onclick="this.closest('form').submit();">
           <div class="btnIcon">
             <p>&nbsp;&nbsp;&nbsp;{% if mode == "create" %}CREAR{% else %}GUARDAR{% endif %}</p>
-            <div class="boxIcon verde"><img src="{{ url_for('static', path='img/continuar.svg') }}"></div>
+            <div class="boxIcon verde"><img src="/static/img/continuar.svg"></div>
             <span class="s-verde"></span>
           </div>
         </button>
